kubernetes/apps/apps/actual-budget/actual-budget/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
spec:
  type: ClusterIP
  selector:
    app: actual-budget
  ports:
    - name: http
      port: 5006
      targetPort: http
      protocol: TCP
